
JasperReports Change Log
===================================

JasperReports 3.6.0 (2009-08-xx, SVN xxx)
---------------------------------------------

- upgrade to LGPL v3;

- minor bug fixes and improvements;





JasperReports 3.5.3 (2009-07-29, SVN 2990)
---------------------------------------------

- new DOCX exporter added to the core library to help creating Word 2007 documents 
based on the Office Open XML format;

- new XLSX exporter provided as a separate sample to those who want to make use of 
the XLSX (Excel 2007) generating capabilities of POI 3.5 Beta;

- new XHTML/CSS exporter added to core library to avoid the grid exporter limitations
of the classic HTML exporter;

- new JDBC-related configuration properties introduced to allow fine-tuning the SQL query execution;

- <since> tag added to properties in the Config Reference documentation;

- minor bug fixes and improvements;





JasperReports 3.5.2 (2009-06-03, SVN 2856)
---------------------------------------------

- the report detail, the group headers and the group footers are now 
multi-band sections, meaning that their content can be distributed into 
several bands, having similar rendering behavior;

- new "splitType" attribute available at band level, to control the band 
breaking policy; this new attribute deprecates the "isSplitAllowed" attribute;

- two new production-ready barcode components that use the Barbecue library
and the Barcode4J library, respectively;

- all configuration properties are now fully documented in a source XML file that
is used to produce a complete and up-to-date HTML configuration reference;

- minor bug fixes and improvements;





JasperReports 3.5.1 (2009-05-05, SVN 2762)
---------------------------------------------

- list component added to simplify iteration through datasets 
without using a subreport;

- support for generic element PDF handlers to allow customizing 
PDF output using generic elements;
