@@ -28,12 +28,12 @@ JasperReports - Web Application Sample
 
 <SCRIPT LANGUAGE="JavaScript"><!--
     if (_ie == true) document.writeln('<OBJECT classid="clsid:8AD9C840-044E-11D1-B3E9-00805F499D93" WIDTH = "300" HEIGHT = "40"  codebase="http://java.sun.com/products/plugin/1.1.2/jinstall-112-win32.cab#Version=1,1,2,0"><NOEMBED><XMP>');
-    else if (_ns == true && _ns6 == false) document.writeln('<EMBED type="application/x-java-applet;version=1.1.2" CODE = "PrinterApplet.class" CODEBASE = "applets" ARCHIVE = "jasperreports-3.6.0-applet.jar,commons-logging-1.0.2.jar,commons-collections-2.1.jar" WIDTH = "300" HEIGHT = "40" REPORT_URL = "../servlets/jasperprint" scriptable=false pluginspage="http://java.sun.com/products/plugin/1.1.2/plugin-install.html"><NOEMBED><XMP>');
+    else if (_ns == true && _ns6 == false) document.writeln('<EMBED type="application/x-java-applet;version=1.1.2" CODE = "PrinterApplet.class" CODEBASE = "applets" ARCHIVE = "jasperreports-3.6.0-applet.jar,commons-logging-1.0.4.jar,commons-collections-2.1.1.jar" WIDTH = "300" HEIGHT = "40" REPORT_URL = "../servlets/jasperprint" scriptable=false pluginspage="http://java.sun.com/products/plugin/1.1.2/plugin-install.html"><NOEMBED><XMP>');
 //--></SCRIPT>
-<APPLET  CODE = "PrinterApplet.class" CODEBASE = "applets" ARCHIVE = "jasperreports-3.6.0-applet.jar,commons-logging-1.0.2.jar,commons-collections-2.1.jar" WIDTH = "300" HEIGHT = "40"></XMP>
+<APPLET  CODE = "PrinterApplet.class" CODEBASE = "applets" ARCHIVE = "jasperreports-3.6.0-applet.jar,commons-logging-1.0.4.jar,commons-collections-2.1.1.jar" WIDTH = "300" HEIGHT = "40"></XMP>
     <PARAM NAME = CODE VALUE = "PrinterApplet.class" >
 <PARAM NAME = CODEBASE VALUE = "applets" >
-<PARAM NAME = ARCHIVE VALUE = "jasperreports-3.6.0-applet.jar,commons-logging-1.0.2.jar,commons-collections-2.1.jar" >
+<PARAM NAME = ARCHIVE VALUE = "jasperreports-3.6.0-applet.jar,commons-logging-1.0.4.jar,commons-collections-2.1.1.jar" >
 
     <PARAM NAME="type" VALUE="application/x-java-applet;version=1.2.2">
     <PARAM NAME="scriptable" VALUE="false">
@@ -46,7 +46,7 @@ JasperReports - Web Application Sample
 </OBJECT>
 
 <!--
-<APPLET CODE = "PrinterApplet.class" CODEBASE = "applets" ARCHIVE = "jasperreports-3.6.0-applet.jar,commons-logging-1.0.2.jar,commons-collections-2.1.jar" WIDTH = "300" HEIGHT = "40">
+<APPLET CODE = "PrinterApplet.class" CODEBASE = "applets" ARCHIVE = "jasperreports-3.6.0-applet.jar,commons-logging-1.0.4.jar,commons-collections-2.1.1.jar" WIDTH = "300" HEIGHT = "40">
 <PARAM NAME = "REPORT_URL" VALUE ="../servlets/jasperprint">
 
 
